# usimd

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  usimd_test1.c
bench/: ReadME.md  bench.c  bench.h  runAllBenchs.sh
example/: usimd_exp1.c
src/: CMakeLists.txt  usimd.c  usimd.h
src/cpuinfo/: CMakeLists.txt  cpuinfo.c  cpuinfo.h  cpuinfo_arm.c  cpuinfo_utils.h  cpuinfo_x86.c
src/lib/: common.h  lib.h  vadd.c  vaddeven.c  vaddindex.c  varrmax.c  vcmul.c  vcountNonZero.c  vdaxpy.c  vdistance.c  vdot.c  vexp.c  vfcond.c  vissort.c  vlog.c  vmatrixmul.c  vmuladd.c  vpi.c  vpopcnt.c  vsincos.c  vsort.c  vsqrt.c  vsum.c  vthreshold.c
src/simd/: intrin.h  intrin_avx.h  intrin_avx512.h  intrin_neon.h  intrin_sse.h  intrin_vsx.h  simd.h  simd_utils.h
src/simd/avx2/: arithmetic.h  avx2.h  conversion.h  math.h  memory.h  misc.h  operators.h  reorder.h  utils.h
src/simd/avx512/: arithmetic.h  avx512.h  conversion.h  math.h  memory.h  misc.h  operators.h  reorder.h  utils.h
src/simd/neon/: arithmetic.h  conversion.h  math.h  memory.h  misc.h  neon.h  operators.h  reorder.h
src/simd/sse/: arithmetic.h  conversion.h  math.h  memory.h  misc.h  operators.h  reorder.h  sse.h
src/simd/vsx/: arithmetic.h  conversion.h  math.h  memory.h  misc.h  operators.h  reorder.h  vsx.h
test/: AllTests.c  CMakeLists.txt  ReadME.md  USIMDTest.c  main.c  runAllTests.sh  usimd_add.c  usimd_pi.c  usimd_test1.c  utils.h
test/cutest/: index.html  make-tests.sh  style.css
